fix: Fall back to no concurrency when building
If `ASDF_CONCURRENCY` is not set, we fall back to 1

--- a/bin/install
+++ b/bin/install
@@ -9,7 +9,7 @@ compile_source() {
 	cd "$ASDF_DOWNLOAD_PATH"
 	{
 		./configure --prefix="$install_path" # TODO: Add more options
-		make -j "$ASDF_CONCURRENCY"
+		make -j "${ASDF_CONCURRENCY:-1}"
 		make install
 	} >/dev/null
 }
