--- a/bin/install
+++ b/bin/install
@@ -14,6 +14,18 @@ jobs() {
 	} 2>/dev/null
 }
 
+_has_icu() {
+	echo '
+  #include <unicode/utypes.h>
+  #include <unicode/uregex.h>
+  #include <unicode/ustring.h>
+  #include <unicode/ucol.h>
+
+  int main(void) {
+    return 0;
+  }' | gcc -x c - 2>/dev/null
+}
+
 compile_source() {
 	local install_path=$1
 	local gcc_options="-Os"
@@ -47,6 +59,10 @@ compile_source() {
 		-DSQLITE_ENABLE_STAT4
 		-DSQLITE_ENABLE_UPDATE_DELETE_LIMIT
 	"
+	if _has_icu; then
+		# ICU is only enabled if libicu-dev (or the equivalent) is installed
+		default_features="$default_features -DSQLITE_ENABLE_ICU"
+	fi
 	# SQLITE_ENABLE_JSON1 is added to enable JSON for versions older than 3.38.0
 	# SQLITE_ENABLE_STAT4 is chosen instead of SQLITE_ENABLE_QPSG because the use case of asdf-sqlite is mostly
 	#                     concerned with running locally on a developer's machin rather than in production
